provarAnt/00D190000000ZY2EAM/objects/QuoteLineItem.object
<CustomObject>
    <fields>
        <fullName>Calculate_Price__c</fullName>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_140, FIND(&quot;.com/&quot;,$Api.Partner_Server_URL_140)+3) + &apos;/apex/PriceOppProductLaunch?AccountId=&apos;+Quote.Opportunity.AccountId+&apos;&amp;ProductId=&apos;+Id,&apos;Price&apos;, &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculate Price</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculated_Sale_Price__c</fullName>
        <label>Sale Price</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Product_Spend__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Product Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Derived_Price__c</fullName>
        <label>Rate Card</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount %</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Geography_Sub_Shorten__c</fullName>
        <label>Geography Sub Shorten</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Geography_Sub__c</fullName>
        <label>Geography Sub</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Priced__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Is Priced</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LongTest__c</fullName>
        <label>LongTest</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QuotePres_PT1__c</fullName>
        <formula>Product2.Name  &amp;
IF( ISBLANK( Rate_Card_Detail__r.Geography__c ),&quot;&quot;, &quot; - &quot; &amp; Rate_Card_Detail__r.Geography__c &amp; &quot; - &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QuotePres PT1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuotePres_PT2__c</fullName>
        <formula>IF(CONTAINS(&quot;BMW Certified Pre-Owned Premium Max 2012 Package 2,BMW Certified Pre-Owned Premium Plus 2012 Package 3,GM Certified Premium Max 2012,GM Certified Premium Plus 2012,GM Certified/New Premium Complete 2014,MINI NEXT Certified Premium Max 2012,Porsche Certified Car Co-op Premium 2014,Porsche Certified Car Co-op Max 2014,Premium 2012,Premium Core 2012,Premium Max 2012,Premium Max with CPO,Premium Plus 2012,Premium Plus with CPO&quot;, Product2.Name), 
IF(Product2.Name = &quot;GM Certified/New Premium Complete 2014&quot;, &quot; - Used: &quot;, &quot; - &quot;) &amp;
IF( ISBLANK( Rate_Card_Detail__r.Make_1__c  ),NULL, Rate_Card_Detail__r.Make_1__c) &amp;
IF(  Rate_Card_Detail__r.Quantity_1__c != 0, &quot;:&quot; &amp; text(Rate_Card_Detail__r.Quantity_1__c), NULL) &amp;
IF( ISBLANK( Rate_Card_Detail__r.Make_2__c  ),NULL, &quot;, &quot; &amp; Rate_Card_Detail__r.Make_2__c) &amp;
IF(  Rate_Card_Detail__r.Quantity_2__c != 0, &quot;:&quot; &amp; text(Rate_Card_Detail__r.Quantity_2__c), NULL) &amp;
IF( ISBLANK( Rate_Card_Detail__r.Make_3__c  ),NULL, &quot;, &quot; &amp; Rate_Card_Detail__r.Make_3__c) &amp;
IF(  Rate_Card_Detail__r.Quantity_3__c != 0, &quot;:&quot; &amp; text(Rate_Card_Detail__r.Quantity_3__c), NULL) &amp;
IF( ISBLANK( Rate_Card_Detail__r.Make_4__c  ),NULL, &quot;, &quot; &amp; Rate_Card_Detail__r.Make_4__c) &amp;
IF(  Rate_Card_Detail__r.Quantity_4__c != 0, &quot;:&quot; &amp; text(Rate_Card_Detail__r.Quantity_4__c), NULL) &amp;
IF(Product2.Name = &quot;GM Certified/New Premium Complete 2014&quot;, &quot; - New: &quot;, &quot;&quot;) &amp;
IF( ISBLANK( Rate_Card_Detail__r.Make_5__c  ),NULL, Rate_Card_Detail__r.Make_5__c) &amp;
IF(  Rate_Card_Detail__r.Quantity_5__c != 0, &quot;:&quot; &amp; text(Rate_Card_Detail__r.Quantity_5__c), NULL) &amp;
IF( ISBLANK( Rate_Card_Detail__r.Make_6__c  ),NULL, &quot;, &quot; &amp; Rate_Card_Detail__r.Make_6__c) &amp;
IF(  Rate_Card_Detail__r.Quantity_6__c != 0, &quot;:&quot; &amp; text(Rate_Card_Detail__r.Quantity_6__c), NULL) &amp;
IF( ISBLANK( Rate_Card_Detail__r.Make_7__c  ),NULL, &quot;, &quot; &amp; Rate_Card_Detail__r.Make_7__c) &amp;
IF(  Rate_Card_Detail__r.Quantity_7__c != 0, &quot;:&quot; &amp; text(Rate_Card_Detail__r.Quantity_7__c), NULL) &amp;
IF( ISBLANK( Rate_Card_Detail__r.Make_8__c  ),NULL, &quot;, &quot; &amp; Rate_Card_Detail__r.Make_8__c) &amp;
IF(  Rate_Card_Detail__r.Quantity_8__c != 0, &quot;:&quot; &amp; text(Rate_Card_Detail__r.Quantity_8__c), NULL) &amp;
IF(Rate_Card_Detail__r.Spotlight_Quantity__c != 0, &quot;Quantity: &quot; &amp; text(Rate_Card_Detail__r.Spotlight_Quantity__c) &amp; &quot; - &quot;, NULL) &amp;
IF(Rate_Card_Detail__r.Spotlight_Duration__c != 0, &quot;Duration: &quot; &amp; text(Rate_Card_Detail__r.Spotlight_Duration__c), NULL), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QuotePres PT2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Card_Detail_Navigate__c</fullName>
        <formula>IF(
  AND(
    OR(
       PricebookEntry.Product2.ProductCode=&apos;P0130&apos;,
       PricebookEntry.Product2.ProductCode=&apos;P0131&apos;,
       PricebookEntry.Product2.ProductCode=&apos;P0132&apos;,
       PricebookEntry.Product2.ProductCode=&apos;P0133&apos;,
       PricebookEntry.Product2.ProductCode=&apos;P0211&apos;,
       PricebookEntry.Product2.ProductCode=&apos;P0212&apos;,
       PricebookEntry.Product2.ProductCode=&apos;P0213&apos;,
       PricebookEntry.Product2.ProductCode=&apos;P0224&apos;,
       PricebookEntry.Product2.ProductCode=&apos;P0225&apos;,
       PricebookEntry.Product2.ProductCode=&apos;P0226&apos;,
       PricebookEntry.Product2.ProductCode=&apos;P0268-Porsche&apos;,
       PricebookEntry.Product2.ProductCode=&apos;P0269-Porsche&apos;,
       PricebookEntry.Product2.ProductCode=&apos;P0132-WithCPO&apos;,
       PricebookEntry.Product2.ProductCode=&apos;P0133-WithCPO&apos;
       ),
    NOT(ISBLANK(Rate_Card_Detail__c))), 
  HYPERLINK(LEFT($Api.Partner_Server_URL_140, FIND(&quot;.com/&quot;,$Api.Partner_Server_URL_140)+3) + &apos;/apex/RateCardDetailViewer?Id=&apos; +  Rate_Card_Detail__c, 
            &apos;Rate Card Detail&apos;, 
            &apos;_blank&apos;),
  &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show Rate Card Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Card_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate Card Detail</label>
        <referenceTo>Rate_Card_Detail__c</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>Quote_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate_Card_Details__c</fullName>
        <formula>IF( Is_Priced__c = 1.0,
&apos;Rate Card: &apos; &amp; 
 text( floor( Derived_Price__c ) ) + &quot;.&quot; + right( text( Derived_Price__c * 100 ), 2 ) &amp;
 BR() &amp; 
 &apos;Discount %: &apos; &amp; 
 text( floor( Discount__c ) ) + &quot;.&quot; + right( text( Discount__c * 100 ), 2 ) &amp;
 BR() &amp;
 &apos;Sale Price: &apos; &amp;  
 text( floor( Calculated_Sale_Price__c ) ) + &quot;.&quot; + right( text( Calculated_Sale_Price__c * 100 ), 2 )
,
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate Card Details</label>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Current_Product_Spend_Cannot_Be_Negative</fullName>
        <active>true</active>
        <description>Current Product Spend Cannot Be Negative</description>
        <errorConditionFormula>Current_Product_Spend__c  &lt; 0.0</errorConditionFormula>
        <errorMessage>Current Product Spend Cannot Be Negative</errorMessage>
    </validationRules>
</CustomObject>